# list_exam

./: CMakeLists.txt  counted.cpp  list.cpp  list.h
